# Gem

./: .travis.yml  Travis.sh  configure.ac
help/: Makefile.am  pix_texin-help.pd  pix_texout-help.pd
plugins/: Makefile.am
plugins/texinBlackMagicDesign/: Makefile.am  texinBlackMagicDesign.cpp  texinBlackMagicDesign.h
plugins/texinDECKLINK/: Makefile.am  configure.ac  texinDECKLINK.cpp
src/Manips/: alpha.cpp  alpha.h
src/Pixes/: Makefile.am  pix_texin.cpp  pix_texin.h  pix_texout.cpp  pix_texout.h
src/plugins/: Makefile.am  PluginFactory.cpp  texin.cpp  texin.h  texinBase.cpp  texinBase.h  texout.cpp  texout.h  texoutBase.cpp  texoutBase.h
